--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.7.1",
     "jscs": "^3.0.7",
+    "object-fit-images": "^3.2.3",
     "pixi-filters": "^2.5.1",
     "pixi.js": "^4.7.0",
     "pug": "^2.0.0-beta6",
@@ -57,6 +58,7 @@
     "scrollmagic": "^2.0.5",
     "standard": "^7.0.0",
     "through2": "^2.0.1",
+    "tiny-slider": "^2.6.0",
     "webpack": "^3.10.0",
     "webpack-md5-hash": "0.0.5",
     "webpack-stream": "^3.2.0"
