--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "imports-loader": "^0.7.1",
     "jscs": "^3.0.7",
     "object-fit-images": "^3.2.3",
+    "perfect-scrollbar": "^1.3.0",
     "pixi-filters": "^2.5.1",
     "pixi.js": "^4.7.0",
     "pug": "^2.0.0-beta6",
